--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,16 @@
   </head>
 
   <body >
+    <audio autoplay >
+      <source src="../mp3.mp3" type="audio/mpeg" />
+  </audio>
+
     <table cellspacing="20">
+      <tr> <audio>
+        <source src="../mp3.mp3" type="audio/mpeg"/>
+      </audio></tr>
       <tr>
-        <td class="ani"><img class="avatar" src="./images/profile.jpg" alt="flag profile picture"></td>
+        <td  class="ani" onHover><img class="avatar" src="./images/profile.jpg" alt="flag profile picture"></td>
         <td><h1>Ali janbein</h1>
         <p><em>Founder and CEO of <strong><a href="/">alinj Sama</a></strong>.</em></p>
         <p>I am a Web Developer. I ❤️ coffee and video games.</p></td>
@@ -59,5 +66,6 @@
       </tr>
     </table>
     <hr>
+    
   </body>
 </html>
