--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,16 @@
   </head>
 
   <body >
-    <audio autoplay >
+    <!-- <audio autoplay >
       <source src="../mp3.mp3" type="audio/mpeg" />
-  </audio>
+  </audio> -->
 
     <table cellspacing="20">
       <tr> <audio>
         <source src="../mp3.mp3" type="audio/mpeg"/>
       </audio></tr>
       <tr>
-        <td  class="ani" onHover><img class="avatar" src="./images/profile.jpg" alt="flag profile picture"></td>
+        <td id="im"  class="ani" onHover><img class="avatar" src="./images/profile.jpg" alt="flag profile picture"></td>
         <td><h1>Ali janbein</h1>
         <p><em>Founder and CEO of <strong><a href="/">alinj Sama</a></strong>.</em></p>
         <p>I am a Web Developer. I ❤️ coffee and video games.</p></td>
@@ -52,7 +52,7 @@
     <hr>
     <h3>Skills</h3>
     <table cellspacing="10">
-      <tr>
+      <tr id="test">
         <td>html</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
@@ -66,6 +66,19 @@
       </tr>
     </table>
     <hr>
-    
+    <script>
+      var audio = new Audio("../wav.wav");
+      const p = document.getElementById("im")
+
+      p.addEventListener("mouseenter", ()=> {
+        console.log("mouse enter");
+        audio.play()
+        
+      })
+      p.addEventListener("mouseleave", ()=> {
+        console.log("mouse enter");
+        audio.pause()
+      })
+    </script>
   </body>
 </html>
